# audiobot

./: run_news_test.py
backend/: .env.example  .gitignore  README.md  TEST_RESULTS.md  config.py  database.py  embeddings.py  main.py  models.py  pyproject.toml
backend/db/: create_tables.sql
backend/db/migrations/: 001_add_settings_fields.sql
backend/output/: embedded_1k_reviews.csv
backend/parallel_api/: .env.example  .gitignore  README.md  __init__.py  database.py  embedding_service.py  main.py  models.py  parallel_unified_service.py  requirements.txt  schemas.py
backend/services/: article_service.py  tts_service.py
frontend/: auth.ts  eslint.config.mjs  package-lock.json  package.json  schema.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/d/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/onboarding/delivery/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/subscription/: page.tsx
frontend/app/success/: page.tsx
frontend/components/: GeneratePodcastButton.tsx  NavLink.tsx  SettingsModal.tsx
frontend/components/auth/: EmailPasswordForm.tsx  SignInButtons.tsx  SignOutButton.tsx
frontend/components/stripe/: BuyButton.tsx  ManageSubscriptionButton.tsx  SubscribeButton.tsx
frontend/components/ui/: button-variants.tsx
frontend/lib/: auth.ts
frontend/lib/actions/: podcast.ts  settings.ts
frontend/lib/aws/: s3.ts  ses.ts
frontend/lib/db/: db.ts  schema.ts
frontend/lib/stripe/: checkout.ts  customer_portal.ts  subscriptions.ts
(+4 files in other folders)
